Work in progress

--- a/week3_class.html
+++ b/week3_class.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="styles/goblal.css">
     <style>
     
-        p{
-            color: green;
-            font-weight: bold;
-            font-size: 30px;
+        .paragraph{
+            background-color: green;
+            padding: 50px;
+            border: solid brown 4px;
+            margin: 80px;
         }
     </style>
 </head>
