--- a/week3_class.html
+++ b/week3_class.html
@@ -16,6 +16,11 @@
             border: solid brown 4px;
             margin: 80px;
         }
+        .hello{
+            background-color: yellow;
+            font-size: 90px;
+            width: 
+        }
     </style>
 </head>
 <body>
