--- a/week3_class.html
+++ b/week3_class.html
@@ -19,12 +19,20 @@
         .hello{
             background-color: yellow;
             font-size: 90px;
-            width: 
+            width: 300px;
+            padding: 30px;
+            
+
         }
     </style>
 </head>
 <body>
-    
+    <div class="hello">
+        hello
+
+    </div>
+
+
     <img src="https://i.ytimg.com/vi/8sUOvDzmrks/hqdefault.jpg" 
     alt="puppies running" width="70%">
 
