--- a/week3_class.html
+++ b/week3_class.html
@@ -19,9 +19,9 @@
         .hello{
             background-color: yellow;
             font-size: 90px;
-            width: 300px;
+            width: 50%;
             padding: 30px;
-            
+
 
         }
     </style>
