--- a/week3_class.html
+++ b/week3_class.html
@@ -21,6 +21,7 @@
             font-size: 90px;
             width: 50%;
             padding: 30px;
+            border: dotted red 6px;
 
 
         }
