--- a/week3_class.html
+++ b/week3_class.html
@@ -21,7 +21,10 @@
             font-size: 90px;
             width: 50%;
             padding: 30px;
-            border: dotted red 6px;
+            /*border: dotted red 6px;*/
+            border-width: 6px;
+            border-style: dashed;
+            border-color: red;
 
 
         }
