--- a/week3_class.html
+++ b/week3_class.html
@@ -21,7 +21,7 @@
             font-size: 90px;
             width: 50%;
             padding: 30px;
-            /*border: dotted red 6px;*/
+            /*border: dotted red 6px; Or you can do it like this. Break it up into 3 parts*/
             border-width: 6px;
             border-style: dashed;
             border-color: red;
