--- a/week3_class.html
+++ b/week3_class.html
@@ -20,7 +20,7 @@
             background-color: yellow;
             font-size: 90px;
             width: 50%;
-            padding: 30px;
+            padding-top: 30px;
             /*border: dotted red 6px; Or you can do it like this. Break it up into 3 parts*/
             border-top-width: 6px;
             border-top-style: dashed;
