--- a/week3_class.html
+++ b/week3_class.html
@@ -25,6 +25,7 @@
             border-top-width: 6px;
             border-top-style: dashed;
             border-top-color: red;
+            margin: 0px 40px 80px 20px;
 
 
         }
