--- a/week3_class.html
+++ b/week3_class.html
@@ -14,7 +14,7 @@
             background-color: green;
             padding: 50px;
             border: solid brown 4px;
-            margin: 80px;
+            margin: 0px 40px 80px 20px
         }
         .hello{
             background-color: yellow;
@@ -25,7 +25,7 @@
             border-top-width: 6px;
             border-top-style: dashed;
             border-top-color: red;
-            margin: 0px 40px 80px 20px;
+            
 
 
         }
