--- a/week3_class.html
+++ b/week3_class.html
@@ -14,7 +14,7 @@
             background-color: green;
             padding: 50px;
             border: solid brown 4px;
-            margin: 0px 40px 80px 20px
+            margin: 0px 40px 80px 20px;
         }
         .hello{
             background-color: yellow;
@@ -29,9 +29,24 @@
 
 
         }
+        .box{
+  background-color: yellow;
+  border: 20px solid black;
+  padding: 50px;
+  margin: 100px;
+  height: 240px;
+  width: 240px;
+  overflow: auto;
+}
+
+
+
     </style>
 </head>
 <body>
+    <div class="box">
+        mybox
+    </div>
     <div class="hello">
         hello
 
