--- a/week3_class.html
+++ b/week3_class.html
@@ -24,7 +24,7 @@
             border-top-style: dashed;
             border-top-color: red;
         }
-
+*/classes*/
         .box{
             background-color: yellow;
             border: 20px solid black;
@@ -47,7 +47,7 @@
     <div class="hello">
         hello
     </div>
-    
+    /*calling classes*/
     <p class="paragraph">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nesciunt ex rem neque accusantium inventore consectetur! Consequatur dolorum debitis necessitatibus neque, eligendi enim nisi fuga suscipit, architecto nemo modi iure.
     </p>
