difference between span, div, and anchor

--- a/week3_class2.html
+++ b/week3_class2.html
@@ -19,12 +19,16 @@
   border: 2px solid black;
   padding: 10px;
   margin: 20px;
+  width: 200;
+  height: 200;
 }
 span{
   background-color: yellow;
   border: 2px solid black;
   padding: 10px;
   margin: 20px;
+  width: 200;
+  height: 200;
 }
 a{
   background-color: orange;
