getting rid of white border

--- a/header.html
+++ b/header.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
+        .body{
+            margin: 0;
+        }
         .header{
             height: 400px;
             background-color: yellow;
-            
+
         }
 
     </style>
