--- a/header.html
+++ b/header.html
@@ -53,11 +53,18 @@
         }
 
         .whiteContainer{
+            height: 350px;
+
             
         }
     </style>
 </head>
 <body>
+    <class class="nav">
+        <a href="#">My City</a>
+        <a href="#">My Home</a>
+        <a href="">Mi Casa</a>
+    </class>
     <div class="header">
         <div class="imgContainer">
             <img class="cityImg" width="100%" src="https://www.outfrontmedia.com/-/media/images/ofm/markets/houston/houston-hero.ashx(255 kB)
@@ -82,7 +89,7 @@
 
     </div>
     <div class="whiteContainer">
-        
+
     </div>
     </div>
 </body>
