--- a/header.html
+++ b/header.html
@@ -62,8 +62,9 @@
 <body>
     <class class="nav">
         <a href="#">My City</a>
-        <a href="#">My Home</a>
-        <a href="">Mi Casa</a>
+        <a href="#">Contact</a>
+        <a href="#">About Us</a>
+        <a href="#">Donate</a>
     </class>
     <div class="header">
         <div class="imgContainer">
