--- a/header.html
+++ b/header.html
@@ -69,7 +69,7 @@
     <div class="header">
         <div class="imgContainer">
             <img class="cityImg" width="100%" src="https://www.outfrontmedia.com/-/media/images/ofm/markets/houston/houston-hero.ashx(255 kB)
-            " alt="">
+            " alt="Downtown">
         </div>
         <div class="textContainer">
             <h1>Hey Houston!</h1>
