--- a/float.html
+++ b/float.html
@@ -10,9 +10,16 @@
             float: right;
             margin: 20px;
         }
+        #test{
+            background-color: yellow;
+        }
+        .clear{
+            clear:both;
+        }
     </style>
 </head>
 <body>
+    
     <div>
         <img src="https://cdn.mos.cms.futurecdn.net/vChK6pTy3vN3KbYZ7UU7k3-320-80.jpg" alt="">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed fugit repellat error nihil, cumque suscipit cupiditate nam officia, tempore temporibus voluptas reiciendis distinctio. Corrupti molestias reiciendis ipsum soluta quia. Veniam?
@@ -27,6 +34,15 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed fugit repellat error nihil, cumque suscipit cupiditate nam officia, tempore temporibus voluptas reiciendis distinctio. Corrupti molestias reiciendis ipsum soluta quia. Veniam?
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis perspiciatis dolorem distinctio error quis ipsam? Tenetur et similique dolore repellendus, eligendi debitis dolor eaque quisquam? Totam facilis praesentium fugiat quasi.
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum vero, at, debitis et excepturi dolor ducimus quo sapiente, ea inventore odit veniam error voluptates voluptate nisi consectetur corrupti eos consequatur!
+    </div>
+    <div id="test" class= "clear"
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum vero, at, debitis et excepturi dolor ducimus quo sapiente, ea inventore odit veniam error voluptates voluptate nisi consectetur corrupti eos consequatur!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed fugit repellat error nihil, cumque suscipit cupiditate nam officia, tempore temporibus voluptas reiciendis distinctio. Corrupti molestias reiciendis ipsum soluta quia. Veniam?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis perspiciatis dolorem distinctio error quis ipsam? Tenetur et similique dolore repellendus, eligendi debitis dolor eaque quisquam? Totam facilis praesentium fugiat quasi.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum vero, at, debitis et excepturi dolor ducimus quo sapiente, ea inventore odit veniam error voluptates voluptate nisi consectetur corrupti eos consequatur!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed fugit repellat error nihil, cumque suscipit cupiditate nam officia, tempore temporibus voluptas reiciendis distinctio. Corrupti molestias reiciendis ipsum soluta quia. Veniam?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis perspiciatis dolorem distinctio error quis ipsam? Tenetur et similique dolore repellendus, eligendi debitis dolor eaque quisquam? Totam facilis praesentium fugiat quasi.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum vero, at, debitis et excepturi dolor ducimus quo sapiente, ea inventore odit veniam error voluptates voluptate nisi consectetur corrupti eos consequatur!>
     </div>
 </body>
 </html>
