--- a/week3_class2hwkquestion3.html
+++ b/week3_class2hwkquestion3.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
+        .header{
+            float:right;
+            
+        }
 
     </style>
 </head>
@@ -19,8 +23,11 @@
 
     </div>
     <div class="main-content">Main content
-        
+
     </div>
+</div>
+<div class="footer">
+
 </div>
 </body>
 </html>
