--- a/week3_class2hwkquestion3.html
+++ b/week3_class2hwkquestion3.html
@@ -7,8 +7,25 @@
     <title>Document</title>
     <style>
         .header{
+            text-align: center;
+            background-color: black;
+            color: white;
+
+
+        }
+        #main{
+
+        }
+        .side-bar{
+            text-align: left;
+            color: white;
+            background-color: black;
             float:right;
-            
+            height: 80;
+            display: inline;
+            margin-left: 30;
+
+
         }
 
     </style>
@@ -18,8 +35,8 @@
 
 </div>
 
-<div class="main">
-    <div class="side-bar">side bar
+<div id="main">
+    <div class="side-bar"><h2>side bar</h2>
 
     </div>
     <div class="main-content">Main content
