--- a/week3_class2hwkquestion3.html
+++ b/week3_class2hwkquestion3.html
@@ -14,16 +14,18 @@
 
         }
         #main{
+            align-content: center;
+            float: left;
 
         }
         .side-bar{
             text-align: left;
             color: white;
             background-color: black;
-            float:right;
+            float: right;
             height: 80;
             display: inline;
-            margin-left: 30;
+            margin-right: 30;
 
 
         }
