--- a/week3_class2hwkquestion3.html
+++ b/week3_class2hwkquestion3.html
@@ -15,7 +15,7 @@
         }
         #main{
             align-content: center;
-            float: left;
+            
 
         }
         .side-bar{
@@ -25,7 +25,7 @@
             float: right;
             height: 80;
             display: inline;
-            margin-right: 30;
+            margin-left: 30;
 
 
         }
