--- a/flex_box.html
+++ b/flex_box.html
@@ -16,6 +16,9 @@
             width: 150px;
             height: 150px;
             background-color: tomato;
+            margin: 10px;
+            font-size: 30px;
+            color: white;
 
 
         }
