--- a/flex_box.html
+++ b/flex_box.html
@@ -16,7 +16,7 @@
             width: 150px;
             height: 150px;
             background-color: tomato;
-            margin: 10px;
+            margin: 10px; /*separated each individual item*/
             font-size: 30px;
             color: white;
 
