--- a/flex_box.html
+++ b/flex_box.html
@@ -8,7 +8,7 @@
     <style>
         .container{
             display: flex;
-            flex-direction: row;
+            flex-direction: row-reverse;
 
 
         }
