--- a/flex_box.html
+++ b/flex_box.html
@@ -9,6 +9,7 @@
         .container{
             display: flex;
             flex-direction: row-reverse;
+            flex-wrap: wrap; /*boxes wrap into next line*/
 
 
         }
@@ -26,6 +27,31 @@
 </head>
 <body>
     <div class="container">
+        <div class="items">1</div>
+        <div class="items">2</div>
+        <div class="items">3</div>
+        <div class="items">4</div>
+        <div class="items">5</div>
+        <div class="items">1</div>
+        <div class="items">2</div>
+        <div class="items">3</div>
+        <div class="items">4</div>
+        <div class="items">5</div>
+        <div class="items">1</div>
+        <div class="items">2</div>
+        <div class="items">3</div>
+        <div class="items">4</div>
+        <div class="items">5</div>
+        <div class="items">1</div>
+        <div class="items">2</div>
+        <div class="items">3</div>
+        <div class="items">4</div>
+        <div class="items">5</div>
+        <div class="items">1</div>
+        <div class="items">2</div>
+        <div class="items">3</div>
+        <div class="items">4</div>
+        <div class="items">5</div>
         <div class="items">1</div>
         <div class="items">2</div>
         <div class="items">3</div>
