--- a/flex_box.html
+++ b/flex_box.html
@@ -8,8 +8,9 @@
     <style>
         .container{
             display: flex;
-            flex-direction: row-reverse;
-            flex-wrap: wrap; /*boxes wrap into next line*/
+            /* flex-direction: row-reverse;
+            flex-wrap: wrap; /*boxes wrap into next line */
+            justify-content: space-between;
 
 
         }
@@ -32,31 +33,7 @@
         <div class="items">3</div>
         <div class="items">4</div>
         <div class="items">5</div>
-        <div class="items">1</div>
-        <div class="items">2</div>
-        <div class="items">3</div>
-        <div class="items">4</div>
-        <div class="items">5</div>
-        <div class="items">1</div>
-        <div class="items">2</div>
-        <div class="items">3</div>
-        <div class="items">4</div>
-        <div class="items">5</div>
-        <div class="items">1</div>
-        <div class="items">2</div>
-        <div class="items">3</div>
-        <div class="items">4</div>
-        <div class="items">5</div>
-        <div class="items">1</div>
-        <div class="items">2</div>
-        <div class="items">3</div>
-        <div class="items">4</div>
-        <div class="items">5</div>
-        <div class="items">1</div>
-        <div class="items">2</div>
-        <div class="items">3</div>
-        <div class="items">4</div>
-        <div class="items">5</div>
+        
 
         </div>
     </div>
