more notes added

--- a/flex_box.html
+++ b/flex_box.html
@@ -8,9 +8,11 @@
     <style>
         .container{
             display: flex;
-            /* flex-direction: row-reverse;
-            flex-wrap: wrap; /*boxes wrap into next line */
-            justify-content: space-between;
+            flex-direction: column; /*direction of main axis*/
+            /* flex-wrap: wrap; boxes wrap into next line */
+            justify-content: flex-end; 
+            height: 1500px;
+
 
 
         }
