--- a/flex_box.html
+++ b/flex_box.html
@@ -10,8 +10,9 @@
             display: flex;
             flex-direction: column; /*direction of main axis*/
             /* flex-wrap: wrap; boxes wrap into next line */
-            justify-content: flex-end; 
+            justify-content: space-between; /*works with horizontal direction(main)*/
             height: 1500px;
+            align-items: flex-end; /*works with cross axis*/
 
 
 
