--- a/flex_box.html
+++ b/flex_box.html
@@ -12,7 +12,9 @@
             /* flex-wrap: wrap; boxes wrap into next line */
             justify-content: space-between; /*works with horizontal direction(main)*/
             height: 1500px;
-            align-items: flex-end; /*works with cross axis*/
+            align-items: center; /*works with cross axis*/
+            background-color: turquoise;
+
 
 
 
