added more notes

--- a/flex_box.html
+++ b/flex_box.html
@@ -12,7 +12,7 @@
             /* flex-wrap: wrap; boxes wrap into next line */
             justify-content: space-between; /*works with horizontal direction(main)*/
             height: 1500px;
-            align-items: center; /*works with cross axis*/
+            align-items: center; /*works with cross axis, so if main axis is vertical, this'll work with horizontal axis*/
             background-color: turquoise;
 
 
