--- a/flex_box.html
+++ b/flex_box.html
@@ -8,11 +8,11 @@
     <style>
         .container{
             display: flex;
-            flex-direction: column; /*direction of main axis*/
+            flex-direction: row; /*direction of main axis*/
             /* flex-wrap: wrap; boxes wrap into next line */
-            justify-content: space-between; /*works with horizontal direction(main)*/
+            justify-content: flex-start; /*works with horizontal direction(main)*/
             height: 1500px;
-            align-items: center; /*works with cross axis, so if main axis is vertical, this'll work with horizontal axis*/
+            align-items: flex-start; /*works with cross axis, so if main axis is vertical, this'll work with horizontal axis*/
             background-color: turquoise;
 
 
@@ -20,22 +20,43 @@
 
         }
         .items{
-            width: 150px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            /* width: 150px;*/
             height: 150px;
             background-color: tomato;
             margin: 10px; /*separated each individual item*/
             font-size: 30px;
             color: white;
+            order: 3; /*everythings order is 0 by default*/
+            flex-grow: 1;
 
 
+        }
+        .order1{
+            order: 2;
+
+        }
+        .item1{
+            flex-grow: 1;
+
+        }
+        .item2{
+            flex-grow: 2;
+        }
+        .item3{
+            flex-grow: 3;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="items">1</div>
-        <div class="items">2</div>
-        <div class="items">3</div>
+        
+        <div class="items item1">1</div>
+        <div class="items order1 item2">2</div>
+        <div class="items item3">3</div>
         <div class="items">4</div>
         <div class="items">5</div>
         
