--- a/mosaic.html
+++ b/mosaic.html
@@ -7,8 +7,20 @@
     <title>Document</title>
 </head>
 <style>
+    .mainbody{
+        display: flex;
+
+    }
+    .square{
+        
+    }
 </style>
 <body>
+    <div class="mainbody">
+        <div class="square square1">
+
+        </div>
+    </div>
     
 </body>
 </html>
