align self center

--- a/flex_box.html
+++ b/flex_box.html
@@ -49,6 +49,9 @@
         .item3{
             flex-grow: 3;
         }
+        .something{
+            align-self: center;
+        }
     </style>
 </head>
 <body>
