--- a/flex_box.html
+++ b/flex_box.html
@@ -60,7 +60,7 @@
         <div class="items item1">1</div>
         <div class="items order1 item2">2</div>
         <div class="items item3">3</div>
-        <div class="items">4</div>
+         <div class="items something">4</div> <!--/*will shift this box down to the centered position*/ -->
         <div class="items">5</div>
         
 
