--- a/center_img.html
+++ b/center_img.html
@@ -8,15 +8,19 @@
 </head>
 <style>
     .centering{
-        display: inline-block;
-        align-self: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: "1000px"
+        background-color: green;
+        
     }
 
 
 </style>
 <body>
     <div class= "centering">
-        <img src= "https://dc-houston.herokuapp.com/p2/HTMLCSS/Images/FlexBoxCenterImage.png" alt= "">
+        <img width= "300px" src= "https://dc-houston.herokuapp.com/p2/HTMLCSS/Images/FlexBoxCenterImage.png" alt= "">
 
     </div>
     
