--- a/mosaic.html
+++ b/mosaic.html
@@ -4,45 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mosaic</title>
+    <title>Document</title>
+    <style>
+        .container{
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            flex-direction: row;
+            align-items: stretch;
+        }
+        .flexContainerRow{
+            display:flex;
+            flex-direction: row;
+            height: 100%; 
+            align-items: stretch;
+        }
+        .flexContainerColumn{
+            display: flex;
+            flex-direction: column;
+            height: 100%; 
+            align-items: stretch;
+        }
+        .red{
+            background-color: red;
+        }
+        .white{
+            background-color: white;
+        }
+        .black{
+            background-color: black;
+        }
+        .yellow{
+            background-color: yellow;
+        }
+        .blue{
+            background-color: blue;
+        }
+        .green{
+            background-color: green;
+        }
+        .flex1{
+            flex: 1;
+        }
+        .flex2{
+            flex:2;
+        }
+        .flex3{
+            flex:3;
+        }
+        .flex4{
+            flex: 4;
+        }
+        .flex5{
+            flex:5;
+        }
+        .border{
+            border: 1px black solid;
+        }
+    </style>
 </head>
-<style>
-    .mainbody{
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        height: auto;
-        background-color: black;
-
-    }
-    .square{
-        margin: 20;
-
-        flex: row;
-        border: black;
-
-
-    }
-    .square1{
-        background-color: red;
-        margin-left: 20px;
-
-    }
-    .square2{
-        background-color: limegreen;
-        color: white;
-    }
-</style>
 <body>
-    <div class="mainbody">
-        <div class="square square1">
-            square 1
+    <div class="container">
+        <div class="flex1 red">
         </div>
-        <div class="square square2">
-            square 2
+        <div class="flex1 black flexContainerRow">
+            <div class="flex1 blue flexContainerColumn">
+                <div class="flex1 yellow border"></div>
+                <div class="flex3 yellow border"></div>
+                <div class="flex3 white border flexContainerRow">
+                    <div class="flex1 white border"></div>
+                    <div class="flex1 white border"></div>
+                </div>
+                <div class="flex1 white border"></div>
+                <div class="flex3 blue border"></div>
+                <div class="flex3 red border"></div>
+            </div>
+            <div class="flex1 green"></div>
         </div>
-
+        <div class="flex1 yellow "></div>
     </div>
-    
 </body>
 </html>
