--- a/mosaic.html
+++ b/mosaic.html
@@ -84,4 +84,4 @@
         <div class="flex1 yellow "></div>
     </div>
 </body>
-</html>
+</html> <!--You will need 3 main div tags for the 3 columns-->
