coffie shop website

--- a/nineties_website.html
+++ b/nineties_website.html
@@ -4,26 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nineties Website</title>
+    <title>Coffie Junkie</title>
 </head>
-<style>
-    .class{
-        background-color: red;
-    }
-    .header{
-        color: purple;
-        font-size: 45;
-        text-align: center;
-    }
-
-</style>
 <body>
-    <h1 class= "header">Welcome to the Nineties!!</h1>
-    <div class="parent">
-        <img src="https://imgix-media.wbdndc.net/cms/filer_public/64/6b/646b1417-4416-47ba-8518-5f21395c0587/header.jpg" alt="Static Shock Super Hero"
-    </div>
-
-
-    
+    <h1>
+        Hello World!
+    </h1>
 </body>
 </html>
