--- a/nineties_website.html
+++ b/nineties_website.html
@@ -7,8 +7,74 @@
     <title>Coffie Junkie</title>
 </head>
 <body>
-    <h1>
-        Hello World!
-    </h1>
+    <img src= "https://i.pinimg.com/originals/91/8f/15/918f15ac8b1522a2a738b8af4834257e.png" alt= "Coffee logo">
+    <h3>Coffee Junkie :)</h3>
+    <ul>
+        <li> <a href="nineties_website.html">Home page</a></li>
+        <li> <a href="about.html">About</a></li>
+        <li> <a href="contact.html">Contact</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+
+    </ul>
+    <img src="https://images.pexels.com/photos/9186/food-beans-coffee-drink.jpg?auto=compress&cs=tinysrgb&dpr=2&w=500" width= "100%" alt= "Coffee beans">
+    <br/>
+    <h1>Featured Selections</h1>
+    <br/>
+    <h2>House Blend Coffee</h2>
+    <img src= "https://images.pexels.com/photos/374885/pexels-photo-374885.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="house blend">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate mollitia natus earum rem itaque animi ea voluptatem? Eius, est tempora eum, asperiores assumenda sint quaerat cum labore fuga ipsum deserunt!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quae, cum nesciunt, laborum quidem saepe quibusdam fugit, consequuntur sapiente error quam eveniet perferendis eos ratione ea. Est aliquam assumenda praesentium?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima eum veritatis odit a. Sed cum quisquam a, vel repudiandae perferendis ad dolore necessitatibus aliquid! Perferendis, dignissimos quis quaerat, aliquid commodi aut vero enim dolor rem, omnis quo recusandae! Ullam, ipsam molestias. Unde ex dolores saepe dolor eius quidem quod iure.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quisquam quibusdam, quaerat quo dolores quod aspernatur cumque autem itaque ullam quae nulla delectus vero maiores ipsa eos sapiente molestiae qui.
+        Eaque veritatis dolores labore ipsum perferendis illum unde commodi, debitis corporis voluptate, tempore aut. Ad praesentium voluptas minus omnis dolores eligendi assumenda sequi et porro. Sit, excepturi accusamus? Repellat, asperiores?
+        Quos alias, ducimus eum a qui dignissimos ad praesentium obcaecati, nesciunt unde rem quam quaerat accusamus cupiditate deleniti? Aut cumque sed dolores ex quas, reiciendis nesciunt rerum id eaque veritatis?
+        Tenetur eveniet molestias porro voluptate nesciunt sed possimus sequi numquam corporis a accusantium laudantium neque eos iure, voluptatum amet ducimus itaque iste beatae expedita voluptatem consectetur! Iusto quis recusandae facilis.
+        Eligendi fugit temporibus fugiat necessitatibus, officiis, sed alias dolor corrupti maxime commodi est sequi ratione, repellendus debitis. Et quae optio corporis veritatis ducimus, corrupti animi molestias dolore tempora explicabo voluptatem?
+        Nihil explicabo fugiat provident vitae tempora facere accusantium maxime iusto eos error. Praesentium ullam animi ipsum? Dolore atque error debitis quo numquam ex quam dicta rerum consequatur, laudantium dignissimos dolorum!
+        Eius nobis natus itaque dolores! Sint culpa dolor incidunt at similique ratione numquam, nobis maxime pariatur, distinctio dolores error cum ab. Molestias error ex praesentium dignissimos deserunt odit voluptatum illum.
+        Sit dolores soluta illo molestias, voluptatum consequatur amet commodi ullam iusto, eos, perspiciatis delectus aspernatur? Impedit, eaque obcaecati inventore natus similique nisi, iusto alias minima voluptates libero, quibusdam possimus modi?
+        Veritatis illum molestiae voluptatibus quaerat cupiditate vitae officiis fuga at adipisci beatae, delectus reiciendis illo fugit? Dolor explicabo praesentium placeat recusandae ea natus. Et porro veniam earum illo provident numquam?
+        Minus dolor, animi assumenda repudiandae illo, perferendis dicta tempore asperiores saepe sequi et accusantium quo officiis facilis placeat nobis nisi eius provident eos neque id quos similique velit ratione! Necessitatibus.
+        Vel neque dicta, doloribus iusto architecto possimus blanditiis exercitationem nostrum natus impedit distinctio cumque pariatur obcaecati eveniet dolores nobis delectus in fugit, nihil aspernatur voluptatem amet. Adipisci ducimus reprehenderit eaque!
+        Velit, suscipit expedita. Veritatis est dicta a. Possimus voluptates error aut suscipit nihil laudantium culpa numquam, ipsam praesentium minus illo sint odio commodi exercitationem, tempore impedit. Dignissimos iste aut earum!
+        Rem quam aliquid in molestias sit, voluptates odit maiores dicta amet pariatur non tenetur tempora. Quisquam ipsa quis, animi consequatur exercitationem modi. Eligendi, inventore dolorum. Pariatur quae in quos. Suscipit?
+        Eaque, voluptatum qui. Amet, doloribus, soluta quae itaque tenetur adipisci similique officiis officia laudantium numquam eligendi vel atque vero laboriosam, suscipit nisi neque eius obcaecati voluptas dolorum consequuntur totam facilis!
+        Sint inventore quos, quidem quibusdam accusantium, maiores illo nisi veritatis a in repellendus vel, ex omnis consectetur cupiditate quas nesciunt nam. Facilis veritatis quidem iure nostrum ad eligendi ut molestiae?
+        Vitae, explicabo odit exercitationem natus perferendis facere delectus itaque dicta ipsum repellendus facilis modi dolor atque velit saepe at quae veniam placeat fugit? Illum rerum, nisi quod id enim corrupti.
+        Adipisci incidunt eum, animi culpa hic voluptate! Mollitia labore veniam soluta nisi minus. Consequuntur natus nobis possimus voluptatum ducimus, consectetur illum illo ut voluptate harum officia nemo excepturi rerum dolor!
+        Quia sequi ullam culpa porro accusantium sed saepe nam voluptate laborum, enim placeat laudantium delectus quasi, suscipit, magnam fuga facere modi qui deserunt cupiditate dolorem voluptates? Deserunt suscipit asperiores laborum.
+        Cum iusto est, repellat corporis dicta, sunt saepe earum enim assumenda necessitatibus blanditiis explicabo, architecto maxime porro veniam tenetur. Aut, delectus corrupti. Laudantium, cum! Ipsa tempora nostrum reiciendis sed modi!
+        Nemo ducimus itaque velit corrupti repellat reprehenderit suscipit, at quos saepe nobis, harum cupiditate officiis nesciunt quas officia! Quis, laudantium illo. Dolore recusandae iusto sapiente dicta, ab provident tempore distinctio!
+        Nam similique modi minus, quidem atque dolores quam in fugit? Numquam cupiditate obcaecati quae pariatur veritatis. Ratione amet optio consequuntur fuga! Deserunt quidem ducimus iure laboriosam dolor, rerum commodi quasi?
+        Cumque exercitationem cupiditate numquam ad, saepe assumenda natus sunt quam autem perspiciatis voluptate iste accusamus officia consectetur nostrum dolores repellat iure quos impedit veritatis architecto nemo commodi. Laudantium, vitae ipsam!
+        Iusto nostrum obcaecati sequi atque quis aliquam iste, vel impedit quidem. Magnam, impedit assumenda! Architecto maiores maxime, consectetur, et, consequuntur veniam ipsum esse laboriosam ipsa nobis eum deserunt quam voluptate?
+        Voluptatibus a vel reprehenderit ad odio id? Voluptatibus autem perferendis molestiae excepturi assumenda in aperiam beatae eligendi, sunt ea error eveniet aut alias neque officiis cupiditate eos, consequatur, maiores iure.
+        Non aliquam perspiciatis a reprehenderit explicabo qui eos maiores et ducimus veniam cumque quos atque odit impedit facere reiciendis, cum neque totam magni illum. Architecto accusamus doloremque minima corporis quisquam?
+        Aut temporibus quas voluptas illum similique enim in suscipit nihil amet blanditiis incidunt cupiditate, numquam earum veniam, cumque expedita fuga. Incidunt tenetur suscipit earum voluptates praesentium quia consequuntur ut maiores.
+        Iste fugiat vero maxime itaque. Natus, non cumque est porro rerum qui quam cupiditate sint architecto magni? Accusamus libero optio non, aliquid nam officiis quae doloribus voluptatibus quo sed adipisci!
+        Eius, dolorum hic dignissimos voluptatum quos beatae dolores laboriosam necessitatibus accusamus soluta nihil cumque iste exercitationem. Magnam perspiciatis totam assumenda quos facere? Minima eligendi, doloribus architecto numquam provident at corrupti?
+        Ipsam laboriosam ex accusamus saepe id. Sequi, dolore dignissimos accusamus iure tempore ipsa, animi voluptates quisquam officia fuga repellat quasi. Libero similique vel animi dolorum aut illo ratione unde cum!
+        Velit eaque veritatis vel in quas quidem nulla, praesentium eos doloremque. Amet quasi eos exercitationem, ducimus est tenetur saepe nostrum repellendus dolorem nihil magni. Odit aut voluptas neque magnam aliquam.
+        Ratione ipsum nulla dolore iure delectus, inventore tenetur voluptate facere, repellat odio eos nam ex. Fugiat adipisci ullam debitis, quaerat ipsa incidunt! Necessitatibus omnis aliquam tenetur modi ullam vitae ad?
+        Suscipit nobis esse laudantium assumenda hic provident totam iste id doloremque. Temporibus deleniti expedita quis sapiente ipsum, dolorum hic? Odit doloribus, eveniet inventore iure hic fuga aspernatur repudiandae laboriosam veniam.
+        Iusto in delectus dignissimos aspernatur animi voluptate molestiae maiores, quae dolor perspiciatis tempore sed culpa quo dolore repellendus eveniet aut a labore voluptatum porro natus praesentium quisquam. Necessitatibus, doloremque in.
+        Cupiditate asperiores ab error iure accusamus? Alias amet labore expedita beatae, nisi mollitia accusamus odit, at voluptate minus quaerat cupiditate laudantium rem ea nostrum optio maxime quisquam? Esse, eius at!
+        Ratione accusamus labore ad iste, dolore aperiam laborum beatae explicabo sapiente, necessitatibus pariatur facilis voluptas ea cumque quibusdam distinctio quidem tenetur expedita autem ex velit? Sunt fugiat laboriosam atque delectus!
+        Voluptatum accusamus voluptatibus molestiae ad quia. Pariatur quisquam laboriosam placeat praesentium nostrum voluptas et saepe optio, labore magni velit, rerum sint similique qui iste aspernatur itaque consequuntur maxime, facere tempore.
+        Nostrum, ex dolorem? Officiis quaerat est asperiores quae odio excepturi eos sequi fugit illum numquam natus, perspiciatis adipisci similique dolores dicta doloremque nemo maiores quo quia! Nulla reprehenderit voluptas deleniti!
+        Nisi, magnam dolor sequi dolore excepturi aliquam aut autem, velit blanditiis ab sunt consequatur dignissimos earum neque debitis at commodi rerum accusamus, iste ullam laboriosam ducimus illo ut! Laborum, architecto.
+        Aliquid molestias veritatis ipsa dolorem ad ipsum debitis, ab enim velit magnam, nemo facere! Fugiat consequuntur perspiciatis, repellendus dignissimos, unde atque, architecto id sunt fugit voluptatem quod! Vitae, voluptas. Praesentium?
+        Nihil reprehenderit mollitia, enim perferendis quo, ea iste molestias facere iusto sequi tenetur, blanditiis quas consectetur neque delectus commodi repellat esse amet consequuntur aut ex? Quia voluptatum repellendus labore eos.
+        Amet, voluptatibus, architecto accusantium pariatur debitis aliquid optio magni earum quae, fugiat rerum? Impedit ut laudantium vitae ducimus eos id, dolore dolor exercitationem voluptas eius similique eaque tenetur corporis laborum?
+        Porro, reiciendis tempora. Enim tempore in perferendis quod excepturi iste tempora autem doloribus sit, ipsam deleniti magnam corporis ullam vel, sequi ab consectetur. Inventore blanditiis aliquid veniam nobis, a tempore?
+        Id minima repellendus explicabo quibusdam omnis, mollitia placeat hic quasi facilis, voluptatibus eveniet quo ipsum aut animi excepturi harum rem aliquid et aspernatur sunt unde labore! Molestias a sequi odio?
+        Reiciendis inventore atque, at ipsa repellendus illum eius molestias dolor quibusdam odio, molestiae maiores cumque adipisci. Sequi, cupiditate maxime sapiente praesentium modi voluptas minus. Aspernatur atque ullam tempore ratione veniam.
+        Itaque cumque quo temporibus vel rem ab aperiam sit quisquam nemo deserunt consectetur dignissimos officiis, esse voluptas quidem et necessitatibus facilis a. Odio quas consequatur placeat ab nisi aperiam aliquam.
+        Quae dolorem modi vel, quis quaerat repudiandae deleniti iure nobis? Saepe, repellat quo. Blanditiis obcaecati quod perspiciatis aliquam eligendi eius libero minus maxime autem molestiae! Dignissimos, a consectetur. Error, est!
+        Incidunt obcaecati unde in aliquid libero voluptatibus deserunt aut, quibusdam ipsam? Eos nemo deleniti officiis id iste cupiditate ut, dolore totam saepe? Error dolorem earum eaque sit totam odit laudantium.
+        At a illo molestias assumenda rem iusto voluptatum reiciendis! Hic quisquam, ipsam voluptas dolor molestias deserunt quis atque veniam adipisci sed minima illo, quaerat eligendi repudiandae dolorem ipsum tempore distinctio?
+        Quam eos sequi excepturi veniam amet facere deleniti sunt aut, inventore ex illo vel facilis eius maiores, saepe ipsam molestias quisquam? Expedita quas corrupti temporibus minus veniam laudantium maxime quam.
+        Aut doloremque voluptatibus, possimus nisi hic odit culpa sit. Eveniet ad minima quam dolorem fuga dolor repellendus veniam, repellat eos accusamus quidem ex tempora, recusandae cumque doloribus et laudantium molestias?
+    </p>
 </body>
 </html>
