creating the website layout

--- a/week3_class2hwkquestion3.html
+++ b/week3_class2hwkquestion3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -48,5 +48,44 @@
 <div class="footer">
 
 </div>
+</body>
+</html> --> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<style>
+    .header{
+        background-color: black;
+        color: white;
+        margin: 30;
+        position: fixed;
+    }
+
+</style>
+<body>
+    <div class="header">
+        header
+
+    </div>
+    <div class="mainContent">
+
+        <div class="sidebar">
+
+        </div>
+        <div class="mainbody">
+
+        </div>
+
+    </div>
+
+    <div class="footer">
+
+    </div>
+    
 </body>
 </html>
