--- a/week3_class2hwkquestion3.html
+++ b/week3_class2hwkquestion3.html
@@ -62,8 +62,24 @@
     .header{
         background-color: black;
         color: white;
-        margin: 30;
-        position: fixed;
+        
+        font-size: 40px;
+        
+        text-align: center;
+    }
+    .mainContent{
+        align-content: center;
+    }
+
+    .sidebar{
+        text-align: left;
+        font-size: 30px;
+        color: white;
+        background-color: black;
+        height:80;
+        display: inline-block;
+        margin-left: 30px;
+        float: right;
     }
 
 </style>
