--- a/week3_class2hwkquestion3.html
+++ b/week3_class2hwkquestion3.html
@@ -74,12 +74,12 @@
     .sidebar{
         text-align: left;
         font-size: 30px;
-        color: white;
-        background-color: black;
+        color: black;
+        background-color: green;
         height:80;
         display: inline-block;
         margin-left: 30px;
-        float: right;
+        
     }
 
 </style>
@@ -91,6 +91,12 @@
     <div class="mainContent">
 
         <div class="sidebar">
+            <ol>
+                <li>Home</li>
+                <li>FAQ</li>
+                <li>Contact</li>
+                <li>Donations</li>
+            </ol>
 
         </div>
         <div class="mainbody">
