how to make website look inside of other devices

--- a/responsive_design.html
+++ b/responsive_design.html
@@ -17,6 +17,20 @@
     justify-content: space-between;
 
 }
+/*any device 400 px or less, this media class kicks in and will apply the styling.*/
+@media screen and(max-width: 400px){
+.myDiv{
+    background-color: yellow;
+    color: black;
+    height: 200;
+    margin-bottom: 15px;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+}
+}
 </style>
 
 </head>
