--- a/bootstrap.html
+++ b/bootstrap.html
@@ -23,7 +23,13 @@
         background-color: red;
     }
     .h500{
-        height: 500;
+        height: 500px;
+    }
+    .purple{
+        background-color: purple;
+    }
+    .h200{
+        height: 200px;
     }
     </style>
 
@@ -32,6 +38,11 @@
       
 
     <div class="container-fluid red">
+        <div class="row">
+            <div class="col-12 purple h200">
+
+            </div>
+        </div>
         <div class="row">
             <div class="col yellow h500">
                 col 1-6
