--- a/bootstrap.html
+++ b/bootstrap.html
@@ -44,13 +44,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="col yellow h500">
+            <div class="col-md-3 col-sm-12 yellow h500">
                 col 1-6
             </div>
-            <div class="col green h500">
+            <div class="col-md-7 col-sm-12 green h500">
                 col 7-12
             </div>
-            <div class="col red h500">
+            <div class="col-md-2 col-sm-12 red h500">
                 col 7-12
 
             </div>
