--- a/my_site.html
+++ b/my_site.html
@@ -11,7 +11,7 @@
     <div class= "My_site">
         <h1 class= "header1"><a href= "my_site.html">MY Website</a></h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore culpa quas porro atque, illo totam libero odit iusto eaque recusandae aliquid maiores sequi tempora nisi fugiat? Rerum perferendis molestias amet.</p>
-        <a class= "yugioh" href="https://yugioh.com/" target="_blank"><img src="https://static-cdn.jtvnw.net/ttv-boxart/Yu-Gi-Oh%21%20TRADING%20CARD%20GAME.jpg" alt="Yugioh"></a>
+        <a class= "yugioh" href="https://yugioh.com/" target="_blank"><img class= "Theyugioh" src="https://static-cdn.jtvnw.net/ttv-boxart/Yu-Gi-Oh%21%20TRADING%20CARD%20GAME.jpg" alt="Yugioh"></a>
     </div>
     
 </body>
