--- a/blackjack.html
+++ b/blackjack.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>A simple blackjack game in JavaScript</title>
     <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab" rel="stylesheet">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="blackjack_flexbox.css">
+    <link rel="stylesheet" href="blackjack.css">
   </head>
   <body>
 
