--- a/blackjack.html
+++ b/blackjack.html
@@ -10,7 +10,7 @@
   <body>
 
     <div id="table">
-      <div id="dealer-score" class="score">Dealer score: <span>0</span></div>
+      <div id="dealer-points" class="points">Dealer score: <span>0</span></div>
       <div id="deck">
         <div class="back"></div>
       </div>
@@ -19,7 +19,7 @@
 
       <div class="border-line"></div>
 
-      <div id="player-score" class="score">Your score: <span>0</span></div>
+      <div id="player-points" class="points">Your score: <span>0</span></div>
       <div class="container" id="player">
       </div>
     </div>
