--- a/blackjack.html
+++ b/blackjack.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>A simple blackjack game in JavaScript</title>
+    <title>Black-Jack Game</title>
     <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab" rel="stylesheet">
     <link rel="stylesheet" href="blackjack_flexbox.css">
     <link rel="stylesheet" href="blackjack.css">
@@ -10,7 +10,7 @@
   <body>
 
     <div id="table">
-      <div id="dealer-points" class="points">Dealer score: <span>0</span></div>
+      <div id="dealer-points" class="points">Dealer's Points: <span>0</span></div>
       <div id="deck">
         <div class="back"></div>
       </div>
@@ -19,13 +19,13 @@
 
       <div class="border-line"></div>
 
-      <div id="player-points" class="points">Your score: <span>0</span></div>
+      <div id="player-points" class="points">Your points: <span>0</span></div>
       <div class="container" id="player">
       </div>
     </div>
 
     <div id="panel">
-      <div id="status">Press Deal to start game</div>
+      <div id="status">Press Deal to start</div>
 
       <button id="deal" class="blue" type="button">DEAL</button>
       <button id="hit" class="green" type="button" disabled>HIT</button>
