--- a/regular.html
+++ b/regular.html
@@ -13,6 +13,6 @@
   src="http://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
-  <script src= ></script>
+  <script src="regular.js" ></script>
 </body>
 </html>
