--- a/regular.html
+++ b/regular.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div></div>
+    <div>Hello world</div>
     
     <script
   src="http://code.jquery.com/jquery-3.4.1.min.js"
