--- a/regular.html
+++ b/regular.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div>Hello world</div>
+    <p id= "paragraph">This is a paragraph</p>
     
     <script
   src="http://code.jquery.com/jquery-3.4.1.min.js"
