--- a/regular.html
+++ b/regular.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div>Hello world</div>
-    <p id= "paragraph">This is a paragraph</p>
+    <p id= "paragraph" class= "myImage">This is a paragraph</p>
+    <img src="" alt="" class= "myImage"> 
     
     <script
   src="http://code.jquery.com/jquery-3.4.1.min.js"
