--- a/regular.html
+++ b/regular.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+<style>
+    .myAnchor{
+        color: purple;
+        font-size: 20px;
+        text-decoration: none; /*removes link*/
+    }
+    .myAnchor a:hover{
+        text-decoration: underline;
+    }
+
+</style>
+
 </head>
 <body>
     <div>Hello world</div>
