--- a/regular.html
+++ b/regular.html
@@ -15,6 +15,12 @@
         text-decoration: underline;
     }
 
+    .myImage{
+    background-color: yellow;
+    padding: 25px;
+
+    }
+
 </style>
 
 </head>
