keeping count of input

--- a/regular.html
+++ b/regular.html
@@ -25,6 +25,7 @@
 
 </head>
 <body>
+    <input style= "border: solid purple 2px">
     <div>Hello world</div>
     <p id= "paragraph" class= "myImage">This is a paragraph</p>
     <img src="" alt="" class= "myImage"> 
