did hiding and showing

--- a/regular.html
+++ b/regular.html
@@ -25,7 +25,14 @@
 
 </head>
 <body>
-    <input style= "border: solid purple 2px">
+    <textarea name= "" id= "" cols= "30" rows= "10">
+
+
+    </textarea>
+    <button id= "aButton">Click me</button>
+    <button id= "aButtonShow">Show Text Area</button>
+    <br>
+    <input style= "border: solid purple 2px;">
     <div>Hello world</div>
     <p id= "paragraph" class= "myImage">This is a paragraph</p>
     <img src="" alt="" class= "myImage"> 
